[package]
name = "fastnear-data-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
derive_builder = "0.20.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
tracing = "0.1.40"

near-indexer-primitives = { git = 'https://github.com/kobayurii/nearcore.git', branch = "2.2.1-fork" }
